# wavlpf

./: .gitignore  ARCHITECTURE_DIAGRAMS.md  CAT_OSCILLOSCOPE_DISTRIBUTION_METHODS_COMPARISON.md  CAT_OSCILLOSCOPE_FEASIBILITY_ANALYSIS.md  CAT_OSCILLOSCOPE_INSTALLATION.md  CAT_OSCILLOSCOPE_INTEGRATION.md  CAT_OSCILLOSCOPE_INTEGRATION_EN.md  CAT_OSCILLOSCOPE_INTEGRATION_REPORT.md  CAT_OSCILLOSCOPE_LIBRARY_BEST_PRACTICES.md  CI_FAILURE_ANALYSIS.md  DEVELOPMENT.md  DOCUMENTATION_ISSUE_ANALYSIS.md  IMPLEMENTATION_EXAMPLES.md  INTEGRATION_BLOCKERS_SUMMARY.md  INVESTIGATION_SUMMARY.md  ISSUE_39_SUMMARY.md  ISSUE_58_COMPLETION_REPORT.md  LIBRARY_USAGE_ANALYSIS.md  MODULE_DEPENDENCIES.md  NETWORK_RESTRICTIONS_INVESTIGATION.md  PERFORMANCE_DISPLAY_DEMO.md  PERFORMANCE_TIMING_ANALYSIS.md  README.ja.md  README.md  README_ANALYSIS.md  REFACTORING_SUMMARY.md  ROOT_CAUSE_ANALYSIS.md  SUMMARY.md  VISUAL_QUICK_REFERENCE.md  _config.yml  copilot-instructions.md  index.html  package-lock.json  package.json  take-screenshot-local.js  take-screenshot.js  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md
docs/: CAT_OSCILLOSCOPE_WASM_SETUP.md  COPILOT_GITHUB_PAGES_ACCESS.md  DEPLOYMENT_VERIFICATION.md  GITHUB_PAGES_ACCESS_PROPOSAL.md  ISSUE_76_RESOLUTION.md  ISSUE_78_RESOLUTION.md  OSCILLOSCOPE_LAYOUT.md  OSCILLOSCOPE_USAGE.md
generated-docs/: development-status-generated-prompt.md  development-status.md  project-overview-generated-prompt.md  project-overview.md
issue-notes/: 100.md  102.md  104.md  105.md  106.md  109.md  111.md  112.md  113.md  114.md  116.md  118.md  122.md  21.md  24.md  25.md  28.md  30.md  31.md  33.md  35.md  37.md  39.md  41.md  44.md  46.md  48.md  50.md  52.md  53.md  55.md  57.md  58.md  59.md  61.md  63.md  66.md  68.md  70.md  74.md  (+12 more)
scripts/: README.md  install-wasm-pack.sh  investigate-404.js  investigate-cat-oscilloscope.js  screenshot-github-pages.js  setup-cat-oscilloscope-wasm.js  test-console-logs.js  test-pr-changes-locally.sh  test-waveform-screenshot.js  verify-deployment.js
src/: audio-player.ts  filter.test.ts  filter.ts  full-waveform-display.test.ts  full-waveform-display.ts  index.ts  oscillator.test.ts  oscillator.ts  (+25 more)
wasm-audio/: Cargo.toml  README.md
wasm-audio/src/: audio_renderer.rs  filter.rs  lib.rs  oscillator.rs
(+3 files in other folders)
