[package]
name = "wasm_audio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
# Disable wasm-opt because the binaryen download from GitHub fails in restricted network environments.
# The Rust compiler already applies optimizations via opt-level=3 and lto=true above.
wasm-opt = false

